WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
92303
[BlackBerry] readPixels should set alpha to 255 instead of 0 when alpha is disabled
https://bugs.webkit.org/show_bug.cgi?id=92303
Summary
[BlackBerry] readPixels should set alpha to 255 instead of 0 when alpha is di...
Joshua Netterfield
Reported
2012-07-25 14:34:47 PDT
.
Attachments
Patch
(2.10 KB, patch)
2012-07-25 16:53 PDT
,
Joshua Netterfield
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joshua Netterfield
Comment 1
2012-07-25 16:53:35 PDT
Created
attachment 154488
[details]
Patch
Rob Buis
Comment 2
2012-07-25 19:24:16 PDT
Comment on
attachment 154488
[details]
Patch LGTM.
WebKit Review Bot
Comment 3
2012-07-25 19:36:46 PDT
Comment on
attachment 154488
[details]
Patch Clearing flags on attachment: 154488 Committed
r123700
: <
http://trac.webkit.org/changeset/123700
>
WebKit Review Bot
Comment 4
2012-07-25 19:36:50 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug