[BlackBerry] readPixels should set alpha to 255 instead of 0 when alpha is disabled https://bugs.webkit.org/show_bug.cgi?id=92303

Patch by Joshua Netterfield <jnetterfield@rim.com> on 2012-07-25
Reviewed by Rob Buis.

No new tests, because it corrects existing functionality, but it makes BlackBerry
pass context-attributes-alpha-depth-stencil-antialias.html.

* html/canvas/WebGLRenderingContext.cpp:
(WebCore):
(WebCore::WebGLRenderingContext::readPixels):

Canonical link: https://commits.webkit.org/110137@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123700 268f45cc-cd09-0410-ab3c-d52691b4dbfc