Source/WebCore/html/canvas/WebGLRenderingContext.cpp
@@ -3307,9 +3307,10 @@ void WebGLRenderingContext::readPixels(GC3Dint x, GC3Dint y, GC3Dsizei width, GC
         m_context->readPixels(x, y, width, height, format, type, data);
     }
 
-#if OS(DARWIN)
-    // FIXME: remove this section when GL driver bug on Mac is fixed, i.e.,
-    // when alpha is off, readPixels should set alpha to 255 instead of 0.
+#if OS(DARWIN) || OS(QNX)
+    // FIXME: remove this section when GL driver bug on Mac AND the GLES driver bug
+    // on QC & Imagination QNX is fixed, i.e., when alpha is off, readPixels should
+    // set alpha to 255 instead of 0.
     if (!m_framebufferBinding && !m_context->getContextAttributes().alpha) {
         unsigned char* pixels = reinterpret_cast<unsigned char*>(data);
         for (GC3Dsizei iy = 0; iy < height; ++iy) {
